# jarqyndos

./: .gitignore  Dockerfile  admin.py  bot.py  classes.py  config.py  db.py  docker-compose.yml  example.env  example.env.json  helpers.py  index.html  language.json  language.py  logger.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: deploy.yml
categories/: __init__.py  contacts.py  practices.py  psychologist.py  university.py
commands/: contacts.py  partners.py  practices.py  psychologists.py  system.py  universities.py
web/: index.html  script.js
