[project]
name = "jarqyndos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot[job-queue]>=21.10",
    "requests==2.32.3",
]

[tool.pylint.MASTER]
ignore-paths = ["^.venv/.*$", "^.vscode/.*$", "^.github/.*$"]

